[project]
name = "sma-ss-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.6.1",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.10",
    "matplotlib>=3.10.8",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
